Correct spacing in different card types

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -10,12 +10,11 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	border-bottom: 1px solid lighten( $gray, 30% );
 	box-shadow: none;
 	margin: 0 15px;
-	padding: 20px 0 20px;
+	padding: 18px 0 20px;
 	position: relative;
 
 	@include breakpoint( ">660px" ) {
 		margin: 0;
-		padding: 18px 0 20px;
 	}
 
 	&.has-thumbnail {
@@ -53,6 +52,10 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 			}
 		}
 
+		.reader-post-card__post {
+			margin-top: 17px;
+		}
+
 		.reader-post-card__play-icon {
 			opacity: .8;
 			transition: opacity .25s;
@@ -74,8 +77,6 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 					height: 225px;
 					opacity: .4;
 					position: absolute;
-						top: 0;
-						left: 0;
 					width: 100%;
 					z-index: 1;
 				}
@@ -116,7 +117,7 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 			}
 
 			.reader-post-actions {
-				margin: 8px 0 0;
+				margin: 7px 0 0;
 			}
 
 			.reader-post-actions .reader-post-actions__visit {
@@ -127,6 +128,17 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 
 	&.is-gallery .reader-post-card__post {
 		flex-direction: column;
+	}
+
+	.reader-post-actions {
+		margin: 4px 0 0;
+	}
+
+	&.is-excerpt {
+
+		.reader-post-card__post {
+			margin-top: 15px;
+		}
 	}
 }
 
@@ -226,17 +238,17 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
-	margin-top: 17px;
+	margin-top: 14px;
 
 	.reader-post-card__post-details {
 		flex: 1;
 
 		@media #{$reader-post-card-breakpoint-medium} {
-			margin-top: 8px;
+			margin-top: 7px;
 		}
 
 		@media #{$reader-post-card-breakpoint-small} {
-			margin-top: 8px;
+			margin-top: 7px;
 		}
 	}
 
@@ -280,7 +292,7 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	font-size: 15px;
 	line-height: 1.6;
 	font-weight: 100;
-	margin-top: 5px;
+	margin-top: 9px;
 	word-break: break-word;
 }
 
@@ -351,7 +363,7 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	padding: 0;
 	position: absolute;
 		right: 0;
-		top: 18px;
+		top: 16px;
 
 	.gridicon {
 		fill: $blue-medium;
@@ -399,8 +411,16 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 // Gallery cards
 .reader-post-card__gallery {
 	display: flex;
-	margin: 0 0 20px;
+	margin: 0 0 17px;
 	padding: 0;
+
+	@media #{$reader-post-card-breakpoint-medium}  {
+		margin: 0 0 10px;
+	}
+
+	@media #{$reader-post-card-breakpoint-small}  {
+		margin: 0 0 10px;
+	}
 }
 
 .reader-post-card__gallery-item {
@@ -425,7 +445,7 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 }
 
 .reader-post-card__video {
-	padding-bottom: 20px;
+	padding-bottom: 17px;
 }
 
 .reader-post-card__video iframe {
